--- a/WpfApp4/WpfApp4.csproj
+++ b/WpfApp4/WpfApp4.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="bold.png" />
     <Resource Include="italic.png" />
     <Resource Include="new.png" />
